--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="resume-top">
                 <div>
                     <div class="photo">
-                        <img src="./Najma.jpg" href="Profile Picture" />
+                        <img src="./najma.jpg" href="Profile Picture" />
                     </div>
                 </div>
                 <div class="person-name">
